--- a/package.json
+++ b/package.json
@@ -23,10 +23,34 @@
         "async": "0.9.0",
         "chai": "1.9.1",
         "grunt": "0.4.5",
+        "grunt-autoprefixer": "0.7.3",
+        "grunt-concurrent": "0.5.0",
+        "grunt-contrib-clean": "0.5.0",
+        "grunt-contrib-compress": "0.8.0",
+        "grunt-contrib-concat": "0.4.0",
+        "grunt-contrib-copy": "0.5.0",
+        "grunt-contrib-cssmin": "0.9.0",
+        "grunt-contrib-htmlmin": "0.3.0",
+        "grunt-contrib-imagemin": "0.7.0",
+        "grunt-contrib-jshint": "0.10.0",
+        "grunt-contrib-uglify": "0.4.0",
+        "grunt-contrib-watch": "0.6.1",
         "grunt-env": "0.4.1",
         "grunt-express-server": "0.4.17",
+        "grunt-git-describe": "2.3.2",
+        "grunt-gitinfo": "0.1.4",
+        "grunt-google-cdn": "0.4.1",
         "grunt-mocha-cli": "^1.8.0",
         "grunt-newer": "0.7.0",
+        "grunt-ng-annotate": "1.0.1",
+        "grunt-open": "0.2.3",
+        "grunt-rev": "0.1.0",
+        "grunt-ssh": "0.12.1",
+        "grunt-svgmin": "0.4.0",
+        "grunt-usemin": "2.1.1",
+        "grunt-wiredep": "1.7.0",
+        "ip": "^0.3.1",
+        "jshint-stylish": "0.2.0",
         "load-grunt-tasks": "0.4.0",
         "mocha": "1.19.0",
         "moment": "2.9.0",
