--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
         "json3": "~3.3.2",
         "bootstrap": "~3.3.1",
         "jquery": "2.1.4",
-        "angular": "~1.3.6",
+        "angular": "~1.4.0",
         "angular-animate": "1.3.13",
         "angular-cookies": "1.2.16",
         "angular-sanitize": "1.2.16",
@@ -33,10 +33,10 @@
         "angular-input-masks": "2.2.0"
     },
     "devDependencies": {
-        "angular-mocks": "1.2.16",
-        "angular-scenario": "1.2.16"
+        "angular-mocks": "~1.4.0",
+        "angular-scenario": "~1.4.0"
     },
     "resolutions": {
-        "angular": "~1.3.6"
+        "angular": "~1.4.0"
     }
 }
